samples/_failures_safe/1761510259_5f88c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_608b021a.c: In function ‘main’:
./samples/SAFE/__tmp_608b021a.c:159:16: error: missing terminating " character
  159 |         printf("Invalid input or
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_608b021a.c:159:9: error: expected expression at end of input
  159 |         printf("Invalid input or
      |         ^~~~~~
./samples/SAFE/__tmp_608b021a.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_608b021a.c:159:9: error: expected declaration or statement at end of input
